# note

./: .dockerignore  .env.example  .gitignore  DEEPSEEK_USAGE_GUIDE.md  PROJECT_DESCRIPTION.md  README.md  docker-compose.ecs-build.yml  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  项目结构与功能说明文档.md
.github/workflows/: ci.yml  deploy.yml
apps/api/: Dockerfile  pyproject.toml
apps/web/: Dockerfile  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
backend/api/: alembic.ini  pyproject.toml
backend/api/app/: config.py  database.py  main.py  models.py  queueing.py  reprocess.py  reprocess_outdated.py  schemas.py  security.py  seed.py  storage.py  store.py
backend/api/app/routers/: admin.py  auth.py  documents.py  notifications.py  quizzes.py  reports.py  user_settings.py
backend/api/app/services/: __init__.py  deepseek.py  ocr.py  pipeline.py
backend/api/migrations/: env.py
backend/api/migrations/versions/: 20260524_0001_initial_schema.py  20260608_0002_analysis_v2.py  20260610_0003_admin_modules.py
backend/api/tests/: test_api.py  test_config.py  test_learning_artifacts.py  test_migrations.py
docs/deployment/: aliyun-ecs.md
frontend/: button-analysis.md
frontend/web/: .eslintrc.json  middleware.ts  package.json  tailwind.config.ts
infrastructure/: docker-compose.yml
infrastructure/caddy/: Caddyfile
integration/ai-pipeline/: pyproject.toml
integration/ai-pipeline/tests/: test_config.py  test_pipeline.py
integration/ai-pipeline/worker/: config.py  main.py  models.py  pipeline.py  queue.py
(+100 files in other folders)
