[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-study-notes-api"
version = "0.1.0"
description = "FastAPI backend for AI Study Notes"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13.2",
  "boto3>=1.34.0",
  "fastapi>=0.115.0",
  "pgvector>=0.3.4",
  "psycopg[binary]>=3.2.1",
  "pydantic-settings>=2.4.0",
  "redis>=5.0.8",
  "requests>=2.31.0",
  "sqlalchemy>=2.0.32",
  "uvicorn>=0.30.6"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.3.2"
]

[tool.setuptools.packages.find]
where = ["."]
