[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-study-notes-worker"
version = "0.1.0"
description = "AI pipeline worker for AI Study Notes"
requires-python = ">=3.11"
dependencies = [
  "boto3>=1.34.0",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.4.0",
  "pypdf>=4.3.1",
  "redis>=5.0.8"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2"
]

[tool.setuptools.packages.find]
where = ["."]
